Alterações nas logos

--- a/src/assets/pages/_userpages.scss
+++ b/src/assets/pages/_userpages.scss
@@ -7,9 +7,9 @@
 }
 
 .app-logo-inverse {
-  height: $logo-height;
-  width: $logo-width;
-  background: url('./assets/images/logo.png');
+  height: $logo-height-inverse;
+  width: $logo-width-inverse;
+  background: url('./assets/images/logo-big.png');
 }
 
 .app-login-box {
