--- a/src/assets/layout/_layout-variables.scss
+++ b/src/assets/layout/_layout-variables.scss
@@ -12,4 +12,7 @@ $app-sidebar-width-collapsed: 80px;
 $logo-height: 23px;
 $logo-width: 97px;
 
+$logo-height-inverse: 69px;
+$logo-width-inverse: 292px;
+
 $app-header-height: 60px;
